gotwebd: fix overflow css for clone-url

--- a/gotwebd/files/htdocs/gotwebd/gotweb.css
+++ b/gotwebd/files/htdocs/gotwebd/gotweb.css
@@ -433,6 +433,7 @@ dd {
 
 .clone-url {
 	white-space: pre-wrap;
+	overflow-wrap: break-word;
 }
 
 .commit-msg {
